--- a/web/cdc/src/components/Mentorship/mentorship.module.css
+++ b/web/cdc/src/components/Mentorship/mentorship.module.css
@@ -89,6 +89,8 @@
     border-radius: 10px;
     border: 2px solid #000;
 
+    cursor: pointer;
+
     background: none;
     
     transition: all 0.15s ease; 
@@ -120,7 +122,13 @@
     align-items: center;
 }
 
-.programsTableTitles p {
+.programsTableTitles div {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.programsTableTitles div p, .titlesComplete {
     margin: 0;
     color: #000;
     font-family: 'Inter', sans-serif;
@@ -130,17 +138,52 @@
     line-height: normal;
 }
 
-.titlesMentor, .titlesMentee {
-    width: 31.4%;
+.titlesComplete {
+    text-align: center;
+}
+
+.titlesMentor {
+    width: 33.7748%;
+}
+
+.titlesMentee {
+    width: 32.5828%;
 }
 
 .titlesStartDate, .titlesEndDate {
-    width: 8.33%;
+ width: 11.258%;
 }
 
 .titlesComplete {
-    width: 7.33%;
+    width: 8.4768%;
 }
+
+.programsTableTitles div button {
+    display: flex;
+    width: 3rem;
+    height: 3rem;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex-shrink: 0;
+    border-radius: 10px;
+    border: 2px solid #000;
+    background: none;
+    cursor: pointer;
+
+    transition: all 0.15s ease; 
+}
+
+.programsTableTitles div button:hover {
+    box-shadow: 0 0 5px 1px #808080;
+}
+
+.programsTableTitles div button img {
+    width: 2rem;
+    height: 2rem;
+}
+
+
 
 .programsTableBody {
     display: flex;
@@ -202,6 +245,8 @@
 
     border: 0;
     background: none;
+
+    transition: all 0.15s ease; 
 }
 
 .programsTableBodyComplete img {
@@ -295,9 +340,12 @@
     white-space: nowrap;
 }
 
-.blockMenteeByMentor {
+
+
+
+.freeMentees {
     display: flex;
-    width: 30%;
+    width: 25%;
     height: 200px;
     padding: 35px 50px;
     flex-direction: column;
@@ -308,22 +356,19 @@
     border: 3px solid #000;
 }
 
-.menteeByMentorHeading {
+.freeMenteesTitle {
+    margin: 0;
+    
     display: flex;
+
     width: 100%;
     height: 40px;
-    align-items: center;
-    justify-content: space-between;
-}
 
-.menteeByMentorHeading p {
-    margin: 0;
-    display: flex;
-    height: 3rem;
     flex-direction: column;
     justify-content: center;
+
     color: #000;
-    
+
     font-family: 'Inter', sans-serif;
     font-size: 2.4rem;
     font-style: normal;
@@ -331,54 +376,7 @@
     line-height: normal;
 }
 
-.menteeByMentorHeading form {
-    display: flex;
-    width: 176px;
-    height: 40px;
-    align-items: center;
-    gap: 5px;
-    flex-shrink: 0;
-    border-radius: 50px;
-    border: 2px solid #000;
-}
-
-.menteeByMentorHeading form input {
-    width: 70%;
-    height: 100%;
-
-    color: #000;
-
-    font-family: 'Inter', sans-serif;
-    font-size: 2rem;
-    font-style: normal;
-    font-weight: 300;
-    line-height: normal;
-    margin-left: 10px;
-
-    border: 0;
-    background-color: transparent;
-    outline: none;
-}
-
-
-.menteeByMentorHeading form button {
-    display: flex;
-    width: 30px;
-    justify-content: center;
-    align-items: center;
-
-    cursor: pointer;
-
-    border: 0;
-    background: none;
-}
-
-.menteeByMentorHeading form button img {
-    width: 2rem;
-    height: 2rem;
-}
-
-.mentorsByMenteeTable {
+.freeMenteesTable {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -391,7 +389,7 @@
     overflow-x: hidden;
 }
 
-.mentorsByMenteeTable li {
+.freeMenteesTable li {
     margin: 0;
 
     display: flex;
@@ -400,7 +398,7 @@
     align-items: center;
 }
 
-.mentorsByMenteeTable li div {
+.freeMenteesTable li div {
     width: 100%;
     height: 3rem;
 
@@ -477,4 +475,144 @@
     width: 50px;
     height: 50px;
     margin-right: 5.2%;
+}
+
+
+
+
+
+
+.popUp {
+    display: flex;
+    width: 500px;
+    min-height: 180px;
+    padding: 35px 4.5rem;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 15px;
+    flex-shrink: 0;
+    border-radius: 30px;
+    border: 3px solid #000;
+    background-color: #FFFFFF;
+}
+
+.popUpMask {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: 0;
+    left: 0;
+    position: fixed;
+}
+
+.popUpContent {
+    display: flex;
+    width: 100%;
+    height: 95%;
+    flex-direction: column;
+    justify-content: center;
+    flex-shrink: 0;
+    gap: 15px;
+    color: #000;
+
+    font-family: 'Inter', sans-serif;
+    font-size: 2.3rem;
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal;
+
+    overflow: hidden;
+    white-space: nowrap;
+}
+
+.popUpContent form {
+    display: flex;
+    /* width: 100%; */
+    height: 36px;
+    padding: 0 10px;
+    align-items: center;
+    gap: 10px;
+    flex-shrink: 0;
+    border-radius: 10px;
+    border: 2px solid #000;
+}
+
+.popUpContent form input {
+    width: 100%;
+    height: 32px;
+    border: none;
+    outline: none;
+    padding: 0;
+
+    font-family: 'Inter', sans-serif;
+    font-size: 2rem;
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal;
+}
+
+.popUpButtons {
+    display: flex;
+    width: 100%;
+    height: 40px;
+    flex-direction: row;
+    gap: 15px;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.popUpButtons button {
+    display: flex;
+    cursor: pointer;
+    width: 50%;
+    height: 40px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+
+    background: none;
+    border-radius: 10px;
+    border: 2px solid #000;
+
+    transition: all 0.15s ease;
+}
+
+.floatList {
+    display: flex;
+    width: calc(100% - 1rem);
+    height: 100px;
+    overflow: scroll;
+    overflow-x: hidden;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.floatListItem {
+    display: flex;
+    width: 100%;
+    height: 30px;
+    justify-content: space-between;
+    align-items: center;
+
+    cursor: pointer;
+}
+
+.floatName {
+    width: 45%;
+    height: 30px;
+    color: #000;
+    font-family: 'Inter', sans-serif;
+    font-size: 2rem;
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal;
+
+    overflow: hidden;
+    white-space: nowrap;
 }
