--- a/web/cdc/src/components/Teams/teams.module.css
+++ b/web/cdc/src/components/Teams/teams.module.css
@@ -10,14 +10,13 @@
     margin-top: 20px;
     margin-bottom: 70px;
     flex-direction: column;
-    /* align-items: center; */
+    align-items: center;
     gap: 35px;
 }
 
-.wrapperBlocks p {
+.wrapperBlocksTitle {
     margin: 0;
-    margin-left: 5.73%;
-    /* width: 99%; */
+    width: 89%;
 
     color: #000;
 
@@ -33,18 +32,16 @@
     display: flex;
     width: 83.33%;
 
-    margin-left: 8.33%;
-
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    gap: 50px;
+    /* gap: 50px; */
 }
 
 .leftBlock {
     display: flex;
-    width: 42%;
+    width: 28.75%;
     height: 540px;
-    padding: 35px 45px;
+    padding: 35px 4.5rem;
     flex-direction: column;
     align-items: center;
     gap: 15px;
@@ -54,9 +51,9 @@
 
 .rightBlock {
     display: flex;
-    width: 54.5%;
+    width: 56.875%;
     height: 540px;
-    padding: 35px 45px;
+    padding: 35px 4.5rem;
     flex-direction: column;
     align-items: center;
     gap: 15px;
@@ -74,6 +71,8 @@
     flex-shrink: 0;
 }
 
+
+
 .panelAddTeam {
     display: flex;
     width: 35.55%;
@@ -83,6 +82,8 @@
 }
 
 .panelAddTeam p {
+    margin: 0;
+
     color: #000;
 
     text-align: center;
@@ -106,6 +107,8 @@
 
     background: none;
 
+    cursor: pointer;
+
     transition: all 0.15s ease; 
 }
 
@@ -128,10 +131,8 @@
     flex-shrink: 0;
 }
 
-.switchAll {
+.switchActive {
     padding: 0;
-
-    width: 60px;
 
     color: #000;
 
@@ -142,14 +143,14 @@
     font-weight: 600;
     line-height: normal;
 
+    cursor: pointer;
+
     border: 0;
     background: none;
 }
 
-.switchActive {
+.switch {
     padding: 0;
-
-    width: 120px;
 
     color: rgba(0, 0, 0, 0.50);
 
@@ -160,19 +161,21 @@
     font-weight: 400;
     line-height: normal;
 
+    cursor: pointer;
+
     border: 0;
     background: none;
 
     transition: all 0.1s ease;
 }
 
-.switchActive:hover {
+.switch:hover {
     font-size: 2.4rem;
 }
 
 .teamsTable {
     display: flex;
-    width: 91%;
+    width: calc(100% - 1rem);
     height: 523px;
     flex-direction: column;
     align-items: flex-start;
@@ -180,7 +183,7 @@
     overflow: scroll;
     overflow-x: hidden;
 
-    padding-right: 2rem;
+    padding-right: 1rem;
 }
 
 .teamsTable li {
@@ -190,6 +193,7 @@
     /* padding: 6px 10px; */
     justify-content: space-between;
     align-items: center;
+    cursor:pointer;
 }
 
 .lilActive {
@@ -197,13 +201,12 @@
     height: 1rem;
     flex-shrink: 0;
     border-radius: 10px;
-    background: #00CA4E;
 }
 
 .lilName {
     display: flex;
     width: 30.23%;
-    padding-left: 2.32%;
+    /* padding-left: 2.32%; */
     align-items: center;
 
     color: #000;
@@ -215,12 +218,13 @@
     line-height: normal;
 
     overflow: hidden;
+    white-space: nowrap;
 }
 
 .lilLeader {
     display: flex;
     width: 27.9%;
-    padding-left: 2.32%;
+    /* padding-left: 2.32%; */
     align-items: center;
 
     color: #000;
@@ -232,12 +236,13 @@
     line-height: normal;
 
     overflow: hidden;
+    white-space: nowrap;
 }
 
 .lilCreation {
     display: flex;
-    width: 16.23%;
-    padding-left: 2.32%;
+    width: 27.9%;
+    /* padding-left: 2.32%; */
     align-items: center;
 
     color: #000;
@@ -249,6 +254,7 @@
     line-height: normal;
 
     overflow: hidden;
+    white-space: nowrap;
 }
 
 .lilInfo {
@@ -268,7 +274,6 @@
 .lilInfo:hover {
     box-shadow: 0 0 5px 1px #808080;
 }
-
 
 .lilInfo img {
     width: 2rem;
@@ -326,11 +331,9 @@
 
 .headingActivity {
     display: flex;
-    width: 21%;
-    padding: 10px 0px;
+    width: 26.111%;
     align-items: center;
     justify-content: space-between;
-    flex-shrink: 0;
 }
 
 .headingActivity p {
@@ -374,11 +377,11 @@
 
 .leacreLeader {
     display: flex;
-    width: 73%;
+    width: 70.621%;
 
     padding: 10px 0px;
     align-items: center;
-    gap: 12%;
+    justify-content: space-between;
 }
 
 .leacreLeader p {
@@ -393,6 +396,8 @@
 }
 
 .leacreLeaderName {
+    width: 75.2%;
+
     color: #000;
     font-family: 'Inter', sans-serif;
     font-size: 2rem;
@@ -406,7 +411,7 @@
 
 .leacreCreated {
     display: flex;
-    width: 21.55%;
+    width: 26.553%;
     justify-content: space-between;
     align-items: center;
 }
@@ -414,7 +419,7 @@
 .leacreCreated p {
     margin: 0;
     display: flex;
-    width: 60.8%;
+    /* width: 60.8%; */
     height: 40px;
     flex-direction: column;
     justify-content: center;
@@ -455,7 +460,7 @@
 }
 
 .bodyDescriptionText {
-    width: 79.5%;
+    width: calc(82.485% - 2rem);
     height: 120px;
     padding-right: 2rem;
 
@@ -493,10 +498,10 @@
     margin: 0;
 
     display: flex;
-    width: 80%;
+    width: calc(82.485% - 2rem);
     height: 210px;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: flex-start;
 
     padding-right: 2rem;
@@ -569,6 +574,8 @@
     border-radius: 2rem;
     background: none;
 
+    cursor: pointer;
+
     transition: all 0.15s ease;
 }
 
@@ -584,13 +591,12 @@
 .bodyUpdate {
     display: flex;
     width: 100%;
-    height: 30px;
-    justify-content: flex-start;
+    height: 60px;
+    justify-content: space-between;
     align-items: flex-start;
-    gap: 3%;
 }
 
-.bodyUpdate p {
+.bodyUpdate p, .bodyReason p {
     margin: 0;
     width: 15%;
 
@@ -604,9 +610,10 @@
 
 .bodyUpdateDate {
     display: flex;
-    width: 30%;
+    width: 82.485%;
+    height: 60px;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
     align-items: flex-start;
 
     color: #000;
@@ -615,6 +622,36 @@
     font-style: normal;
     font-weight: 300;
     line-height: normal;
+
+    overflow: hidden;
+    white-space: nowrap;
+}
+
+.bodyReason {
+    display: flex;
+    width: 100%;
+    height: 30px;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+
+.bodyReasonReason {
+    display: flex;
+    width: 82.485%;
+    height: 30px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+
+    color: #000;
+    font-family: 'Inter', sans-serif;
+    font-size: 2rem;
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal;
+
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 .bodyButtons {
@@ -625,7 +662,7 @@
     gap: 1rem;
 }
 
-.bodyButtons button {
+.bodyButtonsButton {
     display: flex;
     padding: 10px 15px;
     justify-content: center;
@@ -639,6 +676,8 @@
     font-style: normal;
     font-weight: 500;
     line-height: normal;
+
+    cursor: pointer;
 
     background: none;
 
@@ -711,17 +750,219 @@
     margin-right: 5.2%;
 }
 
+.panelSearch {
+    display: flex;
+    width: calc(100% - 24px);
+    height: 36px;
+    padding: 0 10px;
+    align-items: center;
+    gap: 5px;
 
-@media screen and (max-width: 1750px) {
-    .headingActivity {
-        width: auto;
-        justify-content: none;
-        gap: 2rem
-    }
-
-    .leacreCreated {
-        width: auto;
-        gap: 2.6rem;
-    }
+    border-radius: 10px;
+    border: 2px solid #000;
 }
 
+.panelSearch input {
+    width: 100%;
+    height: 32px;
+    border: none;
+    outline: none;
+    padding: 0;
+
+    font-family: 'Inter', sans-serif;
+    font-size: 1.8rem;
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal;
+}
+
+.panelSearch button {
+    display: flex;
+    width: 36px;
+    height: 36px;
+    align-items: center;
+    justify-content: center;
+    border: none;
+    cursor: pointer;
+
+    background: none;
+}
+
+.panelSearch button img {
+    width: 2rem;
+    height: 2rem;
+}
+
+.tableButtons {
+    display: flex;
+    width: calc(100% - 40px);
+    height: 30px;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.tableButtons button {
+    display: flex;
+    width: 29.268%;
+    height: 30px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    border-radius: 10px;
+    border: 2px solid #000;
+    background: none;
+
+    cursor: pointer;
+
+    transition: all 0.15s ease; 
+}
+
+.tableButtons button:hover {
+    box-shadow: 0 0 5px 1px #808080;
+}
+
+.tableButtons button img {
+    width: 2rem;
+    height: 2rem;
+}
+
+
+
+
+
+
+.popUp {
+    display: flex;
+    width: 500px;
+    min-height: 180px;
+    padding: 35px 4.5rem;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 15px;
+    flex-shrink: 0;
+    border-radius: 30px;
+    border: 3px solid #000;
+    background-color: #FFFFFF;
+}
+
+.popUpMask {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: 0;
+    left: 0;
+    position: fixed;
+}
+
+.popUpContent {
+    display: flex;
+    width: 100%;
+    height: 95%;
+    flex-direction: column;
+    justify-content: center;
+    flex-shrink: 0;
+    gap: 15px;
+    color: #000;
+
+    font-family: 'Inter', sans-serif;
+    font-size: 2.3rem;
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal;
+
+    overflow: hidden;
+    white-space: nowrap;
+}
+
+.popUpContent form {
+    display: flex;
+    /* width: 100%; */
+    height: 36px;
+    padding: 0 10px;
+    align-items: center;
+    gap: 10px;
+    flex-shrink: 0;
+    border-radius: 10px;
+    border: 2px solid #000;
+}
+
+.popUpContent form input {
+    width: 100%;
+    height: 32px;
+    border: none;
+    outline: none;
+    padding: 0;
+
+    font-family: 'Inter', sans-serif;
+    font-size: 2rem;
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal;
+}
+
+.popUpButtons {
+    display: flex;
+    width: 100%;
+    height: 40px;
+    flex-direction: row;
+    gap: 15px;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.popUpButtons button {
+    display: flex;
+    cursor: pointer;
+    width: 50%;
+    height: 40px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+
+    background: none;
+    border-radius: 10px;
+    border: 2px solid #000;
+
+    transition: all 0.15s ease;
+}
+
+.floatList {
+    display: flex;
+    width: calc(100% - 1rem);
+    height: 100px;
+    overflow: scroll;
+    overflow-x: hidden;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.floatListItem {
+    display: flex;
+    width: 100%;
+    height: 30px;
+    justify-content: space-between;
+    align-items: center;
+
+    cursor: pointer;
+}
+
+.floatName {
+    width: 45%;
+    height: 30px;
+    color: #000;
+    font-family: 'Inter', sans-serif;
+    font-size: 2rem;
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal;
+
+    overflow: hidden;
+    white-space: nowrap;
+}
